<resources>
    <string name="app_name">FoodOrderApp_Main</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="userName">User Name :</string>
    <string name="userNameKonakli">konakli</string>
    <string name="addToCart">ADD TO CART</string>

</resources>