<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detailFragment"
            type="com.konakli.foodorderapp_main.ui.detail.DetailFragment" />

        <variable
            name="foodModel"
            type="com.konakli.foodorderapp_main.data.entity.FoodModel" />

        <variable
            name="piece"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.DetailFragment">

        <ImageView
            android:id="@+id/detailImageName"
            imageUrl="@{foodModel.foodImage}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/foodNameDetailView"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_marginTop="64dp"
            android:text="@{foodModel.foodName}"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailImageName" />

        <TextView
            android:id="@+id/foodPriceDetailView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text='@{Integer.toString(foodModel.foodPrice) + "₺"}'
            android:textColor="@color/main_color"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodNameDetailView" />

        <EditText
            android:id="@+id/editTextPieceDetail"
            android:layout_width="57dp"
            android:layout_height="46dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@{piece}"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/decreaseDetailButton" />

        <Button
            android:id="@+id/addToCartDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> detailFragment.postFood(foodModel)}"
            android:text="@string/addToCart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/increaseDetailButton" />

        <Button
            android:id="@+id/increaseDetailButton"
            android:layout_width="51dp"
            android:layout_height="47dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> detailFragment.increasePiece()}"
            android:text="@string/plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextPieceDetail" />

        <Button
            android:id="@+id/decreaseDetailButton"
            android:layout_width="51dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> detailFragment.decreasePiece()}"
            android:text="@string/minus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextUserNameDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textPersonName"
            android:text="@string/userNameKonakli"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/foodPriceDetailView" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:layout_marginStart="8dp"
            android:text="@string/userName"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/editTextUserNameDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextUserNameDetail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>